# Simple-ATM-Controller

./: .gitignore  ATMController_8cpp.html  ATMController_8cpp__incl.map  ATMController_8cpp__incl.md5  ATMController_8hpp.html  ATMController_8hpp__dep__incl.map  ATMController_8hpp__dep__incl.md5  ATMController_8hpp__incl.map  ATMController_8hpp__incl.md5  ATMController_8hpp_source.html  AccountType_8hpp.html  AccountType_8hpp__dep__incl.map  AccountType_8hpp__dep__incl.md5  AccountType_8hpp__incl.map  AccountType_8hpp__incl.md5  AccountType_8hpp_source.html  Account_8hpp.html  Account_8hpp__dep__incl.map  Account_8hpp__dep__incl.md5  Account_8hpp__incl.map  Account_8hpp__incl.md5  Account_8hpp_source.html  Bank_8hpp.html  Bank_8hpp__dep__incl.map  Bank_8hpp__dep__incl.md5  Bank_8hpp__incl.map  Bank_8hpp__incl.md5  Bank_8hpp_source.html  CMakeLists.txt  Dockerfile  README.md  README_8md.html  TaskDescription.md  Transaction_8hpp.html  Transaction_8hpp__dep__incl.map  Transaction_8hpp__dep__incl.md5  Transaction_8hpp__incl.map  Transaction_8hpp__incl.md5  Transaction_8hpp_source.html  annotated.html  (+273 more)
.github/workflows/: ci.yml  tests.yml
cmake/: AddGoogleTest.cmake  Doxyfile.cmake.in  add_FetchContent_MakeAvailable.cmake
include/: ATMController.hpp  main.hpp
include/ATMController/supporting_classes/: Account.hpp  AccountType.hpp  Bank.hpp  Transaction.hpp
include/supporting_classes/: Account.hpp  AccountType.hpp  Bank.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  (+7 more)
src/: ATMController.cpp  CMakeLists.txt  main.cpp
src/supporting_classes/: Account.cpp  AccountType.cpp  Bank.cpp  Transaction.cpp
src/tests/: ATMController.cpp  Account.cpp  AccountType.cpp  Bank.cpp  CMakeLists.txt  Transaction.cpp
src/tests/supporting_classes/: AccountType.cpp  Transaction.cpp
